missing requirements - db knex pg sequelize
